src/objects/Apttus_Config2__SearchFilter__c.object
<CustomObject>
    <description>Represents a search filter</description>
    <fields>
        <fullName>Apttus_Config2__AccountTypeScopeOper__c</fullName>
        <description>The account type scope operator</description>
        <inlineHelpText>The account type scope operator</inlineHelpText>
        <label>Account Type Scope Oper</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>in</fullName>
                </value>
                <value>
                    <fullName>not in</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AccountTypeScope__c</fullName>
        <description>One or more account types associated with the filter</description>
        <inlineHelpText>One or more account types associated with the filter</inlineHelpText>
        <label>Account Type Scope</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the filter is active</description>
        <inlineHelpText>Indicates whether the filter is active</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BusinessObject__c</fullName>
        <description>The business object which provides the context for the filter</description>
        <inlineHelpText>The business object which provides the context for the filter</inlineHelpText>
        <label>Business Object</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Apttus_Config2__UseType__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Asset</fullName>
                </value>
                <value>
                    <fullName>Apttus_Config2__AssetLineItem__c</fullName>
                </value>
                <value>
                    <fullName>Product2</fullName>
                </value>
                <value>
                    <fullName>Apttus_Config2__ProductConfiguration__c</fullName>
                </value>
                <value>
                    <fullName>Apttus_Config2__ProductAttributeValue__c</fullName>
                </value>
                <value>
                    <fullName>Apttus_Config2__RollupData__c</fullName>
                </value>
                <value>
                    <fullName>Apttus_Config2__OrderLineItem__c</fullName>
                </value>
                <value>
                    <fullName>Apttus_Config2__Incentive__c</fullName>
                </value>
                <value>
                    <fullName>Apttus_Config2__Milestone2__c</fullName>
                </value>
                <value>
                    <fullName>Apttus_Config2__MilestoneTemplate__c</fullName>
                </value>
                <value>
                    <fullName>Apttus_Config2__SearchAttributeValue__c</fullName>
                </value>
                <value>
                    <fullName>Apttus_Config2__ClassificationHierarchy__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CountryScopeOper__c</fullName>
        <description>The country scope operator</description>
        <inlineHelpText>The country scope operator</inlineHelpText>
        <label>Country Scope Oper</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>in</fullName>
                </value>
                <value>
                    <fullName>not in</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CountryScope__c</fullName>
        <description>One or more countries associated with the filter</description>
        <inlineHelpText>One or more countries associated with the filter</inlineHelpText>
        <label>Country Scope</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CriteriaFieldNames__c</fullName>
        <description>The list of field names used in the filter criteria</description>
        <inlineHelpText>The list of field names used in the filter criteria</inlineHelpText>
        <label>Criteria Field Names</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Criteria__c</fullName>
        <description>The filter criteria specification</description>
        <inlineHelpText>The filter criteria specification</inlineHelpText>
        <label>Criteria</label>
        <length>16000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Description__c</fullName>
        <description>The description for the filter</description>
        <inlineHelpText>The description for the filter</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__GroupByMapTo__c</fullName>
        <description>A comma separated list of API names of fields in the Rollup Data object the group by maps to. This allows group by values to be persisted along with the rollup data</description>
        <inlineHelpText>A comma separated list of API names of fields in the Rollup Data object the group by maps to. This allows group by values to be persisted along with the rollup data</inlineHelpText>
        <label>Group By Map To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__GroupBy__c</fullName>
        <description>A comma separated list of API names of group by fields</description>
        <inlineHelpText>A comma separated list of API names of group by fields</inlineHelpText>
        <label>Group By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IncentiveId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated incentive</description>
        <inlineHelpText>ID of the associated incentive</inlineHelpText>
        <label>Incentive</label>
        <referenceTo>Apttus_Config2__Incentive__c</referenceTo>
        <relationshipLabel>Search Filters (CPQ)</relationshipLabel>
        <relationshipName>SearchFiltersCPQ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__InclusionCriteriaCompOper__c</fullName>
        <description>The filter inclusion criteria comparison operator</description>
        <inlineHelpText>The filter inclusion criteria comparison operator</inlineHelpText>
        <label>Inclusion Criteria Operator (Deprecated)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>equal to</fullName>
                </value>
                <value>
                    <fullName>not equal to</fullName>
                </value>
                <value>
                    <fullName>starts with</fullName>
                </value>
                <value>
                    <fullName>contains</fullName>
                </value>
                <value>
                    <fullName>does not contain</fullName>
                </value>
                <value>
                    <fullName>less than</fullName>
                </value>
                <value>
                    <fullName>greater than</fullName>
                </value>
                <value>
                    <fullName>less than or equal to</fullName>
                </value>
                <value>
                    <fullName>greater than or equal to</fullName>
                </value>
                <value>
                    <fullName>in</fullName>
                </value>
                <value>
                    <fullName>not in</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__InclusionCriteriaFieldName__c</fullName>
        <description>The filter inclusion criteria field</description>
        <inlineHelpText>The filter inclusion criteria field</inlineHelpText>
        <label>Inclusion Criteria Field (Deprecated)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__InclusionCriteriaFieldNames__c</fullName>
        <description>The list of field names used in the inclusion criteria</description>
        <inlineHelpText>The list of field names used in the inclusion criteria</inlineHelpText>
        <label>Inclusion Criteria Field Names</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__InclusionCriteriaFieldValue__c</fullName>
        <description>The filter inclusion criteria value</description>
        <inlineHelpText>The filter inclusion criteria value</inlineHelpText>
        <label>Inclusion Criteria Value (Deprecated)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__InclusionCriteria__c</fullName>
        <description>The inclusion criteria specification</description>
        <inlineHelpText>The inclusion criteria specification</inlineHelpText>
        <label>Inclusion Criteria</label>
        <length>8000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <description>CPQ-IQ-LC-14018: Used to perform data migration</description>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Migration_Key_Generator__c</fullName>
        <description>CPQ-IQ-LC-14018: Used for master data key generation</description>
        <displayFormat>SF-{0000000}</displayFormat>
        <label>Migration Key Generator</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductFamilyScopeOper__c</fullName>
        <description>The product family scope operator</description>
        <inlineHelpText>The product family scope operator</inlineHelpText>
        <label>Product Family Scope Oper</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>in</fullName>
                </value>
                <value>
                    <fullName>not in</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductFamilyScope__c</fullName>
        <description>One or more product families associated with the filter</description>
        <inlineHelpText>One or more product families associated with the filter</inlineHelpText>
        <label>Product Family Scope</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductScopeOper__c</fullName>
        <description>The product scope operator</description>
        <inlineHelpText>The product scope operator</inlineHelpText>
        <label>Product Scope Oper</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>in</fullName>
                </value>
                <value>
                    <fullName>not in</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductScope__c</fullName>
        <description>One or more products associated with the filter</description>
        <inlineHelpText>One or more products associated with the filter</inlineHelpText>
        <label>Product Scope</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RegionScopeOper__c</fullName>
        <description>The region scope operator</description>
        <inlineHelpText>The region scope operator</inlineHelpText>
        <label>Region Scope Oper</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>in</fullName>
                </value>
                <value>
                    <fullName>not in</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RegionScope__c</fullName>
        <description>One or more regions associated with the filter</description>
        <inlineHelpText>One or more regions associated with the filter</inlineHelpText>
        <label>Region Scope</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RelatedRollupId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated rollup. Only valid for child filters based on rollup data.</description>
        <inlineHelpText>ID of the associated rollup. Only valid for child filters based on rollup data.</inlineHelpText>
        <label>Related Rollup</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Apttus_Config2__UseType__c</field>
                <operation>equals</operation>
                <value>Child Filter</value>
            </filterItems>
            <filterItems>
                <field>$Source.Apttus_Config2__BusinessObject__c</field>
                <operation>equals</operation>
                <value>Apttus_Config2__RollupData__c</value>
            </filterItems>
            <filterItems>
                <field>Apttus_Config2__SearchFilter__c.Apttus_Config2__UseType__c</field>
                <operation>equals</operation>
                <value>Rollup</value>
            </filterItems>
            <infoMessage>Please select a rollup associated with the child filter</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Apttus_Config2__SearchFilter__c</referenceTo>
        <relationshipLabel>Rollups</relationshipLabel>
        <relationshipName>Rollups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RollupBusinessObject__c</fullName>
        <description>The API name of the business object for the rollup</description>
        <inlineHelpText>The API name of the business object for the rollup</inlineHelpText>
        <label>Rollup Business Object (Deprecated)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Apttus_Config2__OrderLineItem__c</fullName>
                    <default>true</default>
                    <label>Apttus_Config2__OrderLineItem__c</label>
                </value>
                <value>
                    <fullName>Apttus_Config2__AssetLineItem__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RollupEffectiveDate__c</fullName>
        <description>The rollup effective date</description>
        <inlineHelpText>The rollup effective date</inlineHelpText>
        <label>Rollup Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RollupEndDateOffsetType__c</fullName>
        <description>The type of offset to apply to the rollup end date</description>
        <inlineHelpText>The type of offset to apply to the rollup end date</inlineHelpText>
        <label>Rollup End Date Offset Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Offset (+) Days</fullName>
                </value>
                <value>
                    <fullName>Offset (-) Days</fullName>
                </value>
                <value>
                    <fullName>Offset (+) Months</fullName>
                </value>
                <value>
                    <fullName>Offset (-) Months</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RollupEndDateOffsetValue__c</fullName>
        <description>The offset value to apply to the rollup end date</description>
        <inlineHelpText>The offset value to apply to the rollup end date</inlineHelpText>
        <label>Rollup End Date Offset Value</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RollupEndDateSourceObjectType__c</fullName>
        <description>Indicates the type of the object that contains the rollup end date source</description>
        <inlineHelpText>Indicates the type of the object that contains the rollup end date source</inlineHelpText>
        <label>Rollup End Date Source Object Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Child Filter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RollupEndDateSourceObject__c</fullName>
        <description>Indicates the rollup business object or a child filter that contains the rollup end date source</description>
        <inlineHelpText>Indicates the rollup business object or a child filter that contains the rollup end date source</inlineHelpText>
        <label>Rollup End Date Source Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RollupEndDateSource__c</fullName>
        <description>Indicates the source field in the rollup business object or a child object which determines the rollup end date</description>
        <inlineHelpText>Indicates the source field in the rollup business object or a child object which determines the rollup end date</inlineHelpText>
        <label>Rollup End Date Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RollupEndDateType__c</fullName>
        <description>The rollup end date type</description>
        <inlineHelpText>The rollup end date type</inlineHelpText>
        <label>Rollup End Date Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Constant</fullName>
                    <default>true</default>
                    <label>Constant</label>
                </value>
                <value>
                    <fullName>Reference Value Source</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RollupEndDate__c</fullName>
        <description>The rollup end date</description>
        <inlineHelpText>The rollup end date</inlineHelpText>
        <label>Rollup End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RollupExclusionCriteria__c</fullName>
        <description>The rollup exclusion filter criteria specification</description>
        <inlineHelpText>The rollup exclusion filter criteria specification</inlineHelpText>
        <label>Rollup Exclusion Criteria</label>
        <length>16000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RollupExpirationDate__c</fullName>
        <description>The rollup expiration date</description>
        <inlineHelpText>The rollup expiration date</inlineHelpText>
        <label>Rollup Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RollupField__c</fullName>
        <description>The rollup field</description>
        <inlineHelpText>The rollup field</inlineHelpText>
        <label>Rollup Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RollupMetricType__c</fullName>
        <description>The rollup metric type.</description>
        <inlineHelpText>The rollup metric type.</inlineHelpText>
        <label>Rollup Metric Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Apttus_Config2__RollupType__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Quantity</fullName>
                </value>
                <value>
                    <fullName>Amount</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RollupPeriodSource__c</fullName>
        <description>Indicates the source field in the rollup business object which determines the rollup period</description>
        <inlineHelpText>Indicates the source field in the rollup business object which determines the rollup period</inlineHelpText>
        <label>Rollup Period Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RollupRecurrenceFrequency__c</fullName>
        <description>The rollup recurrence frequency</description>
        <inlineHelpText>The rollup recurrence frequency</inlineHelpText>
        <label>Rollup Recurrence Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Apttus_Config2__RollupRecurrenceType__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Half Yearly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RollupRecurrenceType__c</fullName>
        <description>The rollup recurrence type</description>
        <inlineHelpText>The rollup recurrence type</inlineHelpText>
        <label>Rollup Recurrence Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>One Time</fullName>
                    <default>true</default>
                    <label>One Time</label>
                </value>
                <value>
                    <fullName>Recurring</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RollupStartDateOffsetType__c</fullName>
        <description>The type of offset to apply to the rollup start date</description>
        <inlineHelpText>The type of offset to apply to the rollup start date</inlineHelpText>
        <label>Rollup Start Date Offset Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Offset (+) Days</fullName>
                </value>
                <value>
                    <fullName>Offset (-) Days</fullName>
                </value>
                <value>
                    <fullName>Offset (+) Months</fullName>
                </value>
                <value>
                    <fullName>Offset (-) Months</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RollupStartDateOffsetValue__c</fullName>
        <description>The offset value to apply to the rollup start date</description>
        <inlineHelpText>The offset value to apply to the rollup start date</inlineHelpText>
        <label>Rollup Start Date Offset Value</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RollupStartDateSourceObjectType__c</fullName>
        <description>Indicates the type of the object that contains the rollup start date source</description>
        <inlineHelpText>Indicates the type of the object that contains the rollup start date source</inlineHelpText>
        <label>Rollup Start Date Source Object Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Child Filter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RollupStartDateSourceObject__c</fullName>
        <description>Indicates the rollup business object or a child filter that contains the rollup start date source</description>
        <inlineHelpText>Indicates the rollup business object or a child filter that contains the rollup start date source</inlineHelpText>
        <label>Rollup Start Date Source Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RollupStartDateSource__c</fullName>
        <description>Indicates the source field in the rollup business object or a child object which determines the rollup start date</description>
        <inlineHelpText>Indicates the source field in the rollup business object or a child object which determines the rollup start date</inlineHelpText>
        <label>Rollup Start Date Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RollupStartDateType__c</fullName>
        <description>The rollup start date type</description>
        <inlineHelpText>The rollup start date type</inlineHelpText>
        <label>Rollup Start Date Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Constant</fullName>
                    <default>true</default>
                    <label>Constant</label>
                </value>
                <value>
                    <fullName>Reference Value Source</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RollupStartDate__c</fullName>
        <description>The rollup start date</description>
        <inlineHelpText>The rollup start date</inlineHelpText>
        <label>Rollup Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RollupType__c</fullName>
        <description>The rollup type</description>
        <inlineHelpText>The rollup type</inlineHelpText>
        <label>Rollup Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SUM</fullName>
                    <default>true</default>
                    <label>SUM</label>
                </value>
                <value>
                    <fullName>COUNT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Sequence__c</fullName>
        <description>The filter evaluation sequence</description>
        <label>Sequence</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__UseType__c</fullName>
        <description>The filter use type</description>
        <inlineHelpText>The filter use type</inlineHelpText>
        <label>Filter Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Option</fullName>
                </value>
                <value>
                    <fullName>Asset</fullName>
                </value>
                <value>
                    <fullName>Child Filter</fullName>
                </value>
                <value>
                    <fullName>Rollup</fullName>
                </value>
                <value>
                    <fullName>Pre-Filter</fullName>
                </value>
                <value>
                    <fullName>Category</fullName>
                </value>
                <value>
                    <fullName>Category with Products</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ValueObject__c</fullName>
        <description>The object to map the value to</description>
        <inlineHelpText>The object to map the value to</inlineHelpText>
        <label>Value Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>User</fullName>
                </value>
                <value>
                    <fullName>Apttus_Config2__ProductConfiguration__c</fullName>
                </value>
                <value>
                    <fullName>Apttus_Config2__ProductAttributeValue__c</fullName>
                </value>
                <value>
                    <fullName>Apttus_Config2__Incentive__c</fullName>
                </value>
                <value>
                    <fullName>Product2</fullName>
                </value>
                <value>
                    <fullName>Apttus_Config2__SearchAttributeValue__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Search Filter (CPQ)</label>
    <listViews>
        <fullName>Apttus_Config2__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Filter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Search Filters (CPQ)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>